@@ -5,6 +5,7 @@ Version 0.4.23, 2011-
 + File: Truncate method
 x Ztring: UTF-8 load/save using generic code instead of Windows functions (they don't work for all Unicode codes)
 x File: Crash with some unordered API calls
+x FileName: Name::Get() wrong behavior in some cases
 
 Version 0.4.22, 2011-09-23
 --------------
